app/src/test/resources/programs/invalid/comments/commented_variable_declaration.exe
foo main() -> Int = {
    // let result: Int = 0;
    /* let result: Int = 0; */
    result // Invalid because variable 'result' has not been declared 
}